<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="duration">Please choose one duration before action</string>
    <string name="shutdown_reboot">Please choose your desired operation</string>
    <string name="suspend_tip">Please choose one duration for suspend</string>
    <string name="Counter">60</string>
    <string name="app_name">StressTest</string>
    <string name="start_test">Start</string>
    <string name="cancel_test">Cancel</string>
    <string name="shut_down">shutdown</string>
    <string name="reboot">reboot</string>
    <string name="suspend">suspend</string>
    <string name="screen">screen</string>
    <string name="total">Total: </string>
    <string name="counter">Counter: </string>
    <string name="ping_fail">Fail to ping: </string>
    <string name="ping_status">The status of ping: </string>
</resources>
